# typst

./: Cargo.toml  FORK-README.md  ICU_OPTIMIZATION.md  README.md  WASM_SIZE_OPTIMIZATION.md
crates/typst/: Cargo.toml
crates/typst-html/: Cargo.toml
crates/typst-html/src/: rules.rs
crates/typst-layout/: Cargo.toml
crates/typst-layout/src/: lib.rs  rules.rs
crates/typst-layout/src/inline/: linebreak.rs  shaping.rs
crates/typst-layout/src/math/: shaping.rs
crates/typst-library/: Cargo.toml
crates/typst-library/src/: diag.rs
crates/typst-library/src/foundations/: func.rs  mod.rs  ops.rs  selector.rs  str.rs
crates/typst-library/src/introspection/: introspector.rs
crates/typst-library/src/layout/: frame.rs
crates/typst-library/src/loading/: mod.rs
crates/typst-library/src/math/: accent.rs
crates/typst-library/src/model/: figure.rs  mod.rs  quote.rs  reference.rs
crates/typst-library/src/text/: mod.rs  raw.rs
crates/typst-library/src/text/font/: color.rs  variant.rs
crates/typst-library/src/visualize/: mod.rs
crates/typst-library/src/visualize/image/: mod.rs  svg.rs
crates/typst-realize/: Cargo.toml
crates/typst-realize/src/: lib.rs
crates/typst-svg/: Cargo.toml
crates/typst-svg/src/: image.rs  text.rs
crates/typst-wasm-test/: Cargo.toml
crates/typst-wasm-test/src/: lib.rs
crates/typst/src/: lib.rs
