[package]
name = "typst-layout"
description = "Typst's layout engine."
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
typst-assets = { workspace = true }
typst-library = { workspace = true }
typst-macros = { workspace = true }
typst-syntax = { workspace = true }
typst-timing = { workspace = true }
typst-utils = { workspace = true }
az = { workspace = true }
bumpalo = { workspace = true }
codex = { workspace = true }
comemo = { workspace = true }
ecow = { workspace = true }
either = { workspace = true }
hypher = { workspace = true, optional = true }
icu_properties = { workspace = true, optional = true }
icu_provider = { workspace = true, optional = true }
icu_provider_adapters = { workspace = true, optional = true }
icu_provider_blob = { workspace = true, optional = true }
icu_segmenter = { workspace = true, optional = true }
kurbo = { workspace = true }
memchr = { workspace = true }
rustc-hash = { workspace = true }
rustybuzz = { workspace = true }
smallvec = { workspace = true }
ttf-parser = { workspace = true }
unicode-bidi = { workspace = true }
unicode-math-class = { workspace = true }
unicode-script = { workspace = true }
unicode-segmentation = { workspace = true }

[features]
default = ["bibliography", "regex", "hyphenation", "images", "icu-linebreak"]
bibliography = ["typst-library/bibliography"]
regex = ["typst-library/regex"]
hyphenation = ["dep:hypher"]
images = ["typst-library/raster-images", "typst-library/svg", "typst-library/pdf-images"]
# ICU-based line breaking with full Unicode support. Disable for smaller WASM.
icu-linebreak = [
    "dep:icu_properties",
    "dep:icu_provider",
    "dep:icu_provider_adapters",
    "dep:icu_provider_blob",
    "dep:icu_segmenter",
]

[lints]
workspace = true
