[package]
name = "typst-library"
description = "Typst's standard library."
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
typst-assets = { workspace = true }
typst-macros = { workspace = true }
typst-syntax = { workspace = true }
typst-timing = { workspace = true }
typst-utils = { workspace = true }
arrayvec = { workspace = true }
az = { workspace = true }
bitflags = { workspace = true }
bumpalo = { workspace = true }
chinese-number = { workspace = true }
ciborium = { workspace = true }
codex = { workspace = true }
comemo = { workspace = true }
csv = { workspace = true, optional = true }
ecow = { workspace = true }
flate2 = { workspace = true }
fontdb = { workspace = true, optional = true }
glidesort = { workspace = true }
hayagriva = { workspace = true, optional = true }
hayro-syntax = { workspace = true, optional = true }
icu_properties = { workspace = true }
icu_provider = { workspace = true }
icu_provider_blob = { workspace = true }
image = { workspace = true, optional = true }
indexmap = { workspace = true }
kamadak-exif = { workspace = true, optional = true }
kurbo = { workspace = true }
lipsum = { workspace = true, optional = true }
memchr = { workspace = true }
palette = { workspace = true }
phf = { workspace = true }
png = { workspace = true }
qcms = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true, optional = true }
regex-syntax = { workspace = true, optional = true }
roxmltree = { workspace = true, optional = true }
rust_decimal = { workspace = true }
rustc-hash = { workspace = true }
rustybuzz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true, optional = true }
siphasher = { workspace = true }
smallvec = { workspace = true }
syntect = { workspace = true, optional = true }
time = { workspace = true }
toml = { workspace = true, optional = true }
ttf-parser = { workspace = true }
two-face = { workspace = true, optional = true }
typed-arena = { workspace = true }
unicode-math-class = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }
unscanny = { workspace = true }
usvg = { workspace = true, optional = true }
utf8_iter = { workspace = true }
wasmi = { workspace = true, optional = true }
xmlwriter = { workspace = true }

[dev-dependencies]
typst-dev-assets = { workspace = true }

[features]
default = ["bibliography", "syntax-highlighting", "plugins", "raster-images", "regex", "pdf-images", "data-loading", "lorem", "svg"]
bibliography = ["dep:hayagriva"]
syntax-highlighting = ["dep:syntect", "dep:two-face"]
plugins = ["dep:wasmi"]
raster-images = ["dep:image", "dep:kamadak-exif"]
regex = ["dep:regex", "dep:regex-syntax"]
pdf-images = ["dep:hayro-syntax"]
data-loading = ["dep:csv", "dep:toml", "dep:serde_yaml", "dep:roxmltree"]
lorem = ["dep:lipsum"]
svg = ["dep:usvg", "dep:fontdb", "dep:roxmltree"]

[lints]
workspace = true
