[package]
name = "typst"
description = "A new markup-based typesetting system that is powerful and easy to learn."
categories = ["compilers", "science"]
keywords = ["markup", "typesetting", "typst"]
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
typst-eval = { workspace = true }
typst-html = { workspace = true, optional = true }
typst-layout = { workspace = true }
typst-library = { workspace = true }
typst-macros = { workspace = true }
typst-realize = { workspace = true }
typst-syntax = { workspace = true }
typst-timing = { workspace = true }
typst-utils = { workspace = true }
arrayvec = { workspace = true }
comemo = { workspace = true }
ecow = { workspace = true }
rustc-hash = { workspace = true }

[features]
default = ["bibliography", "syntax-highlighting", "regex", "html", "hyphenation", "svg"]
html = ["dep:typst-html"]
bibliography = ["typst-library/bibliography", "typst-layout/bibliography", "typst-realize/bibliography", "typst-html?/bibliography"]
syntax-highlighting = ["typst-library/syntax-highlighting"]
regex = ["typst-library/regex", "typst-layout/regex", "typst-realize/regex"]
hyphenation = ["typst-layout/hyphenation"]
svg = ["typst-library/svg"]

[lints]
workspace = true
